// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberTextInput should match snapshot with OS android period comma locale 1`] = `
<TextInput
  allowFontScaling={true}
  editable={true}
  keyboardType="numeric"
  placeholder="Enter an amount"
  placeholderTextColor="rgba(0, 0, 0, 0.4)"
  rejectResponderTermination={true}
  style={
    Array [
      Object {
        "fontFamily": "RegularFont",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      undefined,
    ]
  }
  underlineColorAndroid="transparent"
  value="123"
/>
`;

exports[`NumberTextInput should match snapshot with OS android period decimal locale 1`] = `
<TextInput
  allowFontScaling={true}
  editable={true}
  keyboardType="numeric"
  placeholder="Enter an amount"
  placeholderTextColor="rgba(0, 0, 0, 0.4)"
  rejectResponderTermination={true}
  style={
    Array [
      Object {
        "fontFamily": "RegularFont",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      undefined,
    ]
  }
  underlineColorAndroid="transparent"
  value="123"
/>
`;

exports[`NumberTextInput should match snapshot with OS android period unknown locale 1`] = `
<TextInput
  allowFontScaling={true}
  editable={true}
  keyboardType="numeric"
  placeholder="Enter an amount"
  placeholderTextColor="rgba(0, 0, 0, 0.4)"
  rejectResponderTermination={true}
  style={
    Array [
      Object {
        "fontFamily": "RegularFont",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      undefined,
    ]
  }
  underlineColorAndroid="transparent"
  value="123"
/>
`;

exports[`NumberTextInput should match snapshot with OS ios period comma locale 1`] = `
<TextInput
  allowFontScaling={true}
  editable={true}
  keyboardType="default"
  placeholder="Enter an amount"
  placeholderTextColor="rgba(0, 0, 0, 0.4)"
  rejectResponderTermination={true}
  style={
    Array [
      Object {
        "fontFamily": "RegularFont",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      undefined,
    ]
  }
  underlineColorAndroid="transparent"
  value="123"
/>
`;

exports[`NumberTextInput should match snapshot with OS ios period decimal locale 1`] = `
<TextInput
  allowFontScaling={true}
  editable={true}
  keyboardType="numeric"
  placeholder="Enter an amount"
  placeholderTextColor="rgba(0, 0, 0, 0.4)"
  rejectResponderTermination={true}
  style={
    Array [
      Object {
        "fontFamily": "RegularFont",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      undefined,
    ]
  }
  underlineColorAndroid="transparent"
  value="123"
/>
`;

exports[`NumberTextInput should match snapshot with OS ios period unknown locale 1`] = `
<TextInput
  allowFontScaling={true}
  editable={true}
  keyboardType="default"
  placeholder="Enter an amount"
  placeholderTextColor="rgba(0, 0, 0, 0.4)"
  rejectResponderTermination={true}
  style={
    Array [
      Object {
        "fontFamily": "RegularFont",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      undefined,
    ]
  }
  underlineColorAndroid="transparent"
  value="123"
/>
`;
